<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#224380">

    <!-- Overlay View -->
    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/background"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#deeaee"
        />

    <LinearLayout
        android:id="@+id/personal_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"

        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/persoinfo"
            android:gravity="left"
            android:text="Personal Information"
            android:textColor="#000000"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_username" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name" />

        <EditText
            android:id="@+id/etMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_middle_name" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_last_name" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:inputType="number" />

        <EditText
            android:id="@+id/etContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinnerPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/num"
        android:gravity="right"
        android:text="1/2"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="160dp"

        android:background="@drawable/button_background"
        android:backgroundTint="#deeaee"
        android:textColor="#000000"

        android:text="@string/next" />

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">



        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/adinfo"
            android:gravity="start"
            android:text="Address"
            android:textColor="#000000"
            android:textSize="20sp"
            />




        <EditText
            android:id="@+id/etHouseNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/hint_house_no" />

        <EditText
            android:id="@+id/etStreetNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_street_no" />

        <EditText
            android:id="@+id/etBarangay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_barangay" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city" />

        <EditText
            android:id="@+id/etProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_province" />




        <Button
            android:id="@+id/button_quick_map_scan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="180dp"
            android:layout_marginLeft="130dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#deeaee"
            android:textColor="#000000"
            android:text="@string/quick_map_scan" />
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="160dp"

            android:background="@drawable/button_background"
            android:backgroundTint="#deeaee"
            android:textColor="#000000"
            android:text="@string/back" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="160dp"

            android:background="@drawable/button_background"
            android:backgroundTint="#deeaee"
            android:textColor="#000000"
            android:text="@string/signup" />

    </LinearLayout>

</FrameLayout>
