<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#224380">

    <!-- Overlay View -->
    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/background" />
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#deeaee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:id="@+id/alertnow_round"
            android:src="@drawable/alertnow_round" />

        <TextView
            android:id="@+id/alertNowLogo"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Log In"
            android:textColor="#000000"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/hint_username" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:text="Forgot Password? Click Here to Reset"
                android:textColor="#224380"
                android:textSize="14sp"
                android:textStyle="italic"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:backgroundTint="#deeaee"
                android:textColor="#000000"
                android:text="@string/login" />

            <Button
                android:id="@+id/balikbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:backgroundTint="#deeaee"
                android:textColor="#000000"
                android:text="@string/back" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="16dp" />

        </ScrollView>

    </LinearLayout>
</FrameLayout>
